--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2020 The Android Open Source Project
 
   Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
@@ -13,6 +12,7 @@
   the License.
   -->
 <resources>
+
     <style name="Theme.NewsAppTheming" parent="Theme.Material.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/status_bar</item>
     </style>
